--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "json-server": "^0.17.4",
     "typescript": "^5.0.2",
+    "usehooks-ts": "^2.9.1",
     "vite": "^4.4.5"
   }
 }
