--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "server": "json-server --watch db.json"
   },
   "dependencies": {
+    "@types/yt-player": "^3.5.3",
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.69.4"
+    "sass": "^1.69.4",
+    "yt-player": "^3.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
