--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "json-server": "^0.17.4",
+    "react-player": "^2.13.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
