--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server --watch db.json"
+    "server": "json-server --watch db.json",
+    "server-test": "json-server --watch src/server/db-test.json"
   },
   "dependencies": {
     "axios": "^1.5.1",
