--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "server": "json-server --watch db.json",
-    "server-test": "json-server --watch src/server/db-test.json"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.5.1",
