--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@mui/x-date-pickers": "^7.11.0",
+    "@tanstack/react-query": "^5.51.18",
     "axios": "^1.5.1",
     "dayjs": "^1.11.12",
     "react": "^18.3.1",
@@ -27,6 +28,7 @@
     "sass": "^1.69.4"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.51.15",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
