--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.14.18",
     "@mui/x-date-pickers": "^7.11.0",
     "@tanstack/react-query": "^5.51.18",
+    "@tanstack/react-query-devtools": "^5.51.21",
     "axios": "^1.5.1",
     "dayjs": "^1.11.12",
     "react": "^18.3.1",
