--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-hook-form-mui": "^7.0.1",
     "react-router-dom": "^6.17.0",
     "sass": "^1.69.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
