--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode development",
     "build": "tsc && vite build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d dist --mode production",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "coverage": "vitest run --coverage",
