--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@tanstack/react-query": "^5.51.18",
     "@tanstack/react-query-devtools": "^5.51.21",
     "dayjs": "^1.11.12",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-hook-form-mui": "^7.0.1",
+    "react-leaflet": "^4.0.0",
     "react-router-dom": "^6.17.0",
     "sass": "^1.69.4",
     "yup": "^1.4.0"
