--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@mui/x-date-pickers": "^7.11.0",
     "@tanstack/react-query": "^5.51.18",
     "@tanstack/react-query-devtools": "^5.51.21",
+    "chart.js": "^4.4.7",
     "dayjs": "^1.11.12",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-hook-form-mui": "^7.0.1",
