--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "noFallthroughCasesInSwitch": true,
     
     /* Testing */
-    "types": ["@testing-library/jest-dom"],
+    "types": ["@testing-library/jest-dom", "vite/client"],
     "declaration": true,
     "esModuleInterop": true,
 
