--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
+    "@playwright/test": "^1.50.1",
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/leaflet": "^1.9.15",
+    "@types/node": "^22.13.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
