--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@vitest/ui": "^2.0.4",
     "eslint": "^8.57.0",
     "eslint-plugin-playwright": "^2.2.0",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "gh-pages": "^6.2.0",
