191 - ci: Add GitHub workflows for PR checks and testing branch deployments

--- a/.github/workflows/main-pr-check.yml
+++ b/.github/workflows/main-pr-check.yml
@@ -1,8 +1,9 @@
-name: Check PR Source Branch
+name: Check Source Branch for PR to Main
 on:
+  push:
+    branches: [ main, master ]
   pull_request:
-    branches:
-      - main
+    branches: [ main, master ]
 jobs:
   check-branch:
     runs-on: ubuntu-latest
