--- a/.github/workflows/on-pr-to-testing-deploy-to-testing.yml
+++ b/.github/workflows/on-pr-to-testing-deploy-to-testing.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   lint-build-deploy:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
 
     steps:
@@ -16,7 +17,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: lts/* # Use the latest LTS version of Node.js
 
       - name: Install dependencies
         run: npm ci
