--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,10 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '14'
+        node-version: lts/*
+
+    - name: Clean npm cache # Add this step to clean npm cache
+      run: npm cache clean --force
 
     - name: Install dependencies
       run: npm ci
