--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         node-version: lts/*
 
-    - name: Clean npm cache # Add this step to clean npm cache
+    - name: Clean npm cache
       run: npm cache clean --force
 
     - name: Install dependencies
@@ -33,13 +33,3 @@ jobs:
       run: npx playwright test
       env:
         BASE_URL: https://documentor-api.onrender.com
-
-    - name: Create Pull Request to main
-      uses: peter-evans/create-pull-request@v4
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        branch: testing
-        base: main
-        title: 'Automated PR from testing to main'
-        body: 'This PR is automatically created from the testing branch to the main branch after successful tests.'
-        draft: false
